--- a/css/styles.css
+++ b/css/styles.css
@@ -112,7 +112,7 @@ body {
 }
 
 .logo img {
-  padding: 3rem;
+  padding: 2rem .5rem;
 }
 
 header {
@@ -131,7 +131,7 @@ h1 {
 .description {
   font-size: 1rem;
   line-height: 1.12rem;
-  padding: 2rem;
+  padding: .5rem 1.5rem;
 }
 
 h2 {
@@ -151,7 +151,7 @@ p {
   text-align: center;
   border: 4px solid black;
   background: #ddd7d5;
-  padding: 1rem;
+  padding: 1rem .5rem;
 }
 
 @media (min-width: 1000px) {
